--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: Henri.Halle22@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A collection of the works of Henri Halle
 
-baseurl: "https://madhalle.github.io/henndogg-portfolio" # the subpath of your site, e.g. /blog/
+baseurl: "https://madhalle.github.io/henndogg-portfolio/" # the subpath of your site, e.g. /blog/
 # baseurl: "" # local
 # url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
